objects/zPaperEtc__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>hold all the org specific values</description>
    <fields>
        <fullName>Fax_Record_Type_ID__c</fullName>
        <label>Fax Record Type ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekend_Phone__c</fullName>
        <label>Weekend Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>inboundFaxRecordType__c</fullName>
        <defaultValue>&quot;0121D0000002GKNQA2&quot;</defaultValue>
        <description>//zData.inboundFaxRecordType = &quot;0121D0000002GKNQA2&quot;; //JPB180706 updated record type</description>
        <label>inboundFaxRecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>zPaperEtc</label>
</CustomObject>